# yt-data

./: README.md  fb_target.txt  result_full.json  target.txt
data/: bc-registries.csv  newwest-permits.csv  verification-summary.json  victoria-permit-emails.csv
output/: fb_reel_audio.m4a  fb_reel_error.txt  fb_reel_meta.txt  fb_reel_raw.json  raw_response.json  result.json  result_full.json
results/: all_leads.csv  ca_domains_0_2.txt  ca_domains_0_93.txt  ca_domains_102_104.txt  ca_domains_1032_1125.txt  ca_domains_105_107.txt  ca_domains_108_110.txt  ca_domains_111_113.txt  ca_domains_1126_1218.txt  ca_domains_114_116.txt  ca_domains_117_119.txt  ca_domains_120_122.txt  ca_domains_1219_1312.txt  ca_domains_123_125.txt  ca_domains_126_128.txt  ca_domains_129_131.txt  ca_domains_12_14.txt  ca_domains_1313_1406.txt  ca_domains_132_134.txt  ca_domains_135_137.txt  ca_domains_138_140.txt  ca_domains_141_143.txt  ca_domains_144_146.txt  ca_domains_147_149.txt  ca_domains_150_152.txt  ca_domains_153_155.txt  ca_domains_156_158.txt  ca_domains_159_161.txt  ca_domains_162_164.txt  ca_domains_165_167.txt  ca_domains_168_170.txt  ca_domains_171_173.txt  ca_domains_174_176.txt  ca_domains_177_179.txt  ca_domains_180_182.txt  ca_domains_183_185.txt  ca_domains_186_188.txt  ca_domains_188_281.txt  ca_domains_189_191.txt  ca_domains_18_20.txt  (+327 more)
scripts/: commoncrawl_wat.py  extract.py  ga_cluster_resolve.py  permit_fingerprint.py  rdap_lookup.py  scrape_permits.py  (+3 more)
web-mapper/: Cargo.toml
web-mapper/src/: cluster.rs  db.rs  extractor.rs  fetcher.rs  gnn.rs  main.rs
(+12 files in other folders)
