[package]
name = "web-mapper"
version = "0.1.0"
edition = "2021"
description = "Chain-reaction web mapper — maps the web via shared tracking IDs, 100x faster than Python"

[[bin]]
name = "web-mapper"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
anyhow = "1"
once_cell = "1"
csv = "1"
futures = "0.3"
tokio-stream = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
